--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/material": "^5.2.1",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "relay-runtime": "^12.0.0"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
+    "@types/relay-runtime": "^12.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
