--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,8 @@
 	"presets": [
 		["next/babel", {"preset-react": {"runtime":"automatic", "importSource": "@emotion/react"}}]
 	],
-	"plugins": ["@emotion/babel-plugin"]
+	"plugins": [
+		"@emotion/babel-plugin",
+		["relay", { "artifactDirectory": "./src/__generated__" }],
+	]
 }
