--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-relay": "^12.0.0",
     "relay-runtime": "^12.0.0"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
+    "@types/react-relay": "^11.0.2",
     "@types/relay-runtime": "^12.0.0",
+    "babel-plugin-relay": "^12.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "relay-compiler": "^12.0.0",
+    "relay-compiler-language-typescript": "^15.0.0",
     "typescript": "4.5.2"
   }
 }
